--- a/style.css
+++ b/style.css
@@ -32,14 +32,15 @@ body {
 
 header h1 {
     text-align: center;
-    font-size: 32px;
-    color: #007bff;
+    font-size: 18px;
+    color: #0056b3;
     margin-bottom: 20px;
+    margin-top: 20px;
     font-weight: bold;
 }
 
 h2 {
-    font-size: 26px;
+    font-size: 16px;
     color: #0056b3;
     margin-top: 20px;
 }
@@ -70,12 +71,12 @@ footer a:hover {
 /* Logo in the upper left corner */
 .logo-container {
     position: absolute;
-    top: 20px;
-    left: 20px;
+    top: 10px;
+    left: 10px;
 }
 
 .logo {
-    width: 100px;
+    width: 150px;
     height: auto;
 }
 
